# BC-Bench

./: .editorconfig  .env.sample  .gitignore  .pre-commit-config.yaml  CATEGORIES.md  CONTRIBUTING.md  COUNTERFACTUAL.md  EXPERIMENT.md  EXPERIMENTS.md  HOW_TO_RUN_PR_SECURITY_REVIEW.md  IMPLEMENTATION_SUMMARY.md  README.md  TAGGING_GUIDE.md  TAG_CREATION_README.md  create_tag_v0.1.0.sh  pyproject.toml  results.jsonl
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/: copilot-instructions.md
.github/prompts/: create-counterfactual.prompt.md
.github/workflows/: CI.yml  bcal-evaluation.yml  claude-evaluation.yml  collect-and-screen.yml  copilot-evaluation.yml  copilot-setup-steps.yml  dataset-validation.yml  download-jsonl-from-evaluation.yml  download_jsonl_last_runs.py  (+9 more)
analysis/: dataset.ipynb
dataset/: bcbench.jsonl  bcbench_extensibility.yaml  bcbench_fn_metrics.json  bcbench_nav.jsonl  codereview.jsonl  counterfactual.jsonl  hello_world.jsonl  instructions.md  judge_calibration.jsonl  judge_prompt.md  nl2al.jsonl  nl2al.quarantine.jsonl  nl2al_challenge.jsonl  nl2al_quarantine.jsonl  nl2al_safety.jsonl  prdataset.jsonl  schema.json
docs/: PR_DATASET_INTEGRATION.md  _config.yml  bug-fix.md  code-review.md  index.md  test-generation.md
evaluator/: counterfactual_scores.py  extensibility_scores.py  metrics.py  scores.py  thesis_scores.py
notebooks/: bug-fix.ipynb  claude-vs-copilot.ipynb  dataset.ipynb  result.ipynb
scripts/: AppUtils.psm1  BCBenchUtils.psm1  BCContainerManagement.psm1  Collect-And-Screen.ps1  DatasetEntry.psm1  Download-ApplicationApp.ps1  Download-BCSymbols.ps1  Get-WorkflowSummary.ps1  Setup-ContainerAndRepository.ps1  Summarize-VerificationResults.ps1  VerificationResult.psm1  Verify-BuildAndTests.ps1  bcbench_analyze_artifacts.py  bcbench_last10_testgen.py  group_errors_from_summary.py  run_all_codereview_evals.ps1  run_pr_security_review.py
tests/: conftest.py  test_agent_skills.py  test_agent_type_exhaustiveness.py  test_bc_artifacts.py  test_bcal_agent_provider.py  test_bcal_capi_bridge.py  test_bcal_timeout_budget.py  test_category_command.py  test_category_exhaustiveness.py  test_cf_workspace.py  test_claude_code_metrics.py  test_cli_commands.py  test_codereview.py  test_codereview_bcquality.py  test_codereview_judge_calibration.py  test_collect_gh.py  test_copilot_api_error_detection.py  test_copilot_metrics_parsing.py  test_copilot_prompt.py  test_copilot_sdk_metrics.py  test_copilot_version.py  test_counterfactual.py  test_custom_instructions.py  test_dataset_entry_hierarchy.py  test_dataset_entry_operations.py  test_diff_path_repeated_flags.py  test_evaluate_pipeline.py  test_evaluation_factories.py  test_evaluation_summary.py  test_exceptions_classes.py  test_experiment_configuration.py  test_extract_tests_from_patch.py  test_family_analysis.py  test_get_task.py  test_git_operations.py  test_hello_world_pipeline.py  test_hooks_operations.py  test_hooks_parser.py  test_image_count.py  test_instruction_operations.py  (+29 more)
tools/: README.md  _sec_dump2.txt  _sec_dump3.txt  apply_enrichment.py  batch_verify.py  dump_entries.py  fix_enrichment_iteration_1.py  fix_enrichment_iteration_2.py  ood_worklist.py  probe_codereview_batch.py  probe_codereview_case.py  run_entry.py  unindent_bait_files.py  vendor_bcquality_skill.py
(+713 files in other folders)
