[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bcbench"
version = "0.5.2"
description = "Benchmarking tool for Business Central (AL) ecosystem, inspired by SWE-Bench"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Microsoft Corporation"}
]
classifiers = ["Private :: Do Not Upload"]
dependencies = [
    "jsonschema>=4.0",
    "python-dotenv>=1.2.2",
    "requests>=2.0",
    "unidiff>=0.7",
    "typer>=0.9.0",
    "typing-extensions>=4.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "textual>=7.0",
    "numpy>=2.3.5",
    "scipy>=1.16.3",
    "jinja2>=3.1.6",
]

[project.scripts]
bcbench = "bcbench.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bcbench = ["agent/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--strict-markers"]
markers = [
    "integration"
]
collect_imported_tests = false

[tool.ruff]
target-version = "py313"
line-length = 200

[tool.ruff.lint]
extend-select = [
    "PLE",   # Pylint errors (includes __all__ validation)
    "PLW",   # Pylint warnings (includes subprocess.run check requirement)
    "I",     # isort (import sorting)
    "UP",    # pyupgrade (modernize Python code)
    "B",     # flake8-bugbear (find likely bugs)
    "SIM",   # flake8-simplify (simplify code)
    "C4",    # flake8-comprehensions (better list/dict comprehensions)
    "PIE",   # flake8-pie (misc lints)
    "RET",   # flake8-return (simplify return statements)
    "PTH",   # flake8-use-pathlib (prefer pathlib over os.path)
    "RUF",   # Ruff-specific rules
    "TID252", # Ban relative imports
    "LOG",    # flake8-logging: catch deprecated logging.warn, misuse of exception(), etc.
    "G",      # flake8-logging-format: catch string concat / % formatting in log calls
    "TRY400", # Use logger.exception() in except blocks (preserves traceback)
    "PT",     # flake8-pytest-style: consistent pytest patterns (~30 test files)
    "ANN",    # flake8-annotations: enforce type hints (we prefer strong typing)
    "T20",    # flake8-print: prefer logger over print (we have a proper logger)
]

# Ignore specific rules that might be too aggressive
ignore = [
    "UP035",   # deprecated-import (typing.Dict, etc. still valid)
    "PTH123",  # Allow open() for now, Path.open() migration can be gradual
    "G004",    # logging-f-string: f-strings are more readable; perf cost is negligible
    "ANN401",  # Any in **kwargs: needed for kwarg forwarding through inheritance; revisit later
]

[tool.ruff.lint.per-file-ignores]
# Tests don't need return type annotations (test_foo() always returns None)
# Notebooks are exploratory by design
"tests/**" = ["ANN"]
"notebooks/**" = ["ANN", "T20"]   # notebooks routinely print() for analysis output
"src/bcbench/commands/**" = ["T20"]   # CLI commands print user-facing output
"tools/**" = ["T20"]                  # standalone CLI scripts

[dependency-groups]
analysis = [
    "ipykernel>=7.1.0",
    "nbformat>=5.10.4",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.0",
    "ruff>=0.15.0",
    "pre-commit>=4.3.0",
    "ty>=0.0.33",
]
